--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
+    "@types/is-bigint": "^1.0.0",
+    "big-integer": "^1.6.51",
     "bigint-conversion": "^2.4.1",
-    "bigint-crypto-utils": "^3.1.8",
+    "bigint-crypto-utils": "^3.2.2",
     "cors": "^2.8.5",
     "express": "^4.18.2"
   }
